log

Wed 13 Mar 2024 09:02:27 PM UTC: 
 tests:  0|7
total_score: 0/70
f429a6f
Wed 13 Mar 2024 09:08:59 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
a70a0ec
Wed 13 Mar 2024 09:09:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
5368168
Wed 13 Mar 2024 09:10:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
2c956d7
Wed 13 Mar 2024 09:18:34 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
9a57cf1
Wed 13 Mar 2024 09:18:58 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
4be813f
Wed 13 Mar 2024 09:19:30 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
24d62cd
Wed 13 Mar 2024 09:21:56 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:34:11: error: unused variable ‘temp’ [-Werror=unused-variable]
   34 |       int temp = arr[i];
      |           ^~~~
cc1: all warnings being treated as errors
Compilation failed
17d76ee
Sat 16 Mar 2024 12:29:40 AM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|6
total_score: 10/70
fa82e5b
Sat 16 Mar 2024 12:36:13 AM UTC: 
 exercises.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 20/70
86413b9
Sat 16 Mar 2024 12:45:12 AM UTC: 
 exercises.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:56:35: error: ‘count’ undeclared (first use in this function)
   56 |     int *arrpares = (int *)malloc(count * sizeof(int));
      |                                   ^~~~~
exercises.c:56:35: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d778042
Sat 16 Mar 2024 12:45:27 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
a05c6b7
Sat 16 Mar 2024 12:59:21 AM UTC: 
 exercises.c | 35 +++++++++++++++++++++++++++++++++--
 1 file changed, 33 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
5670099
Sat 16 Mar 2024 06:20:06 PM UTC: 
 exercises.c | 32 +++++++++++++++++++++++++++++++-
 1 file changed, 31 insertions(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
92b6065
